--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -46,6 +46,13 @@ lie_algebras/so3_test
 
 target_link_libraries(so3_test gtest_main)
 
+add_executable(se3_test
+lie_algebras/se3_test
+../src/lie_algebras/se3.cpp
+../src/lie_algebras/so3.cpp)
+
+target_link_libraries(se3_test gtest_main)
+
 
 # add_executable(SO2_test
 #  lie_groups/SO2_test.cpp 
