--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 3.0)
 project(lie_groups)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_BUILD_TYPE RELEASE)
+set(CMAKE_BUILD_TYPE DEBUG)
+# set(CMAKE_BUILD_TYPE RELEASE)
 # set(CMAKE_CXX_FLAGS "-march=native")
 
 find_package(Eigen3)
