--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(lie_groups)
 
 set(CMAKE_CXX_STANDARD 11)
 # set(CMAKE_BUILD_TYPE DEBUG)
-set(CMAKE_BUILD_TYPE RELEASE)
+# set(CMAKE_BUILD_TYPE RELEASE)
 # set(CMAKE_CXX_FLAGS "-march=native")
 
 find_package(Eigen3)
